--- a/ejemplo.html
+++ b/ejemplo.html
@@ -6,6 +6,6 @@
     <title>Ejemplo HTML para Git</title>
 </head>
 <body>
-    <h1>Estot aprendiendo git</h1>
+    <h1>Estot aprendiendo git MODIFICADO</h1>
 </body>
 </html>
